--- a/Cia_gyvena_laime/Aviziniai_blynai.html
+++ b/Cia_gyvena_laime/Aviziniai_blynai.html
@@ -94,24 +94,12 @@
 	</div>
 	<div class="navigation">
 		<ul class="navigation_list">
-			<li>
-				<a class="fas fa-times" href=""></a>
-			</li>
-			<li>
-				<a class="list_item" href="">Receptai</a>
-			</li>
-			<li>
-				<a class="list_item" href="">Gėlės</a>
-			</li>
-			<li>
-				<a class="list_item" href="">Vaikai</a>
-			</li>
-			<li>
-				<a class="list_item" href="">Laisvalaikis</a>
-			</li>
-			<li>
-				<a class="list_item" href="Kontaktine_forma/index.php">Parašykite man</a>
-			</li>
+			<li><a class="fas fa-times" href=""></a></li>
+			<li><a class="list_item" href="">Receptai</a></li>
+			<li><a class="list_item" href="">Gėlės</a></li>
+			<li><a class="list_item" href="">Vaikai</a></li>
+			<li><a class="list_item" href="">Laisvalaikis</a></li>
+			<li><a class="list_item" href="Kontaktine_forma/index.php">Parašykite man</a></li>
 		</ul>
 	</div>
 </body>
