--- a/Cia_gyvena_laime/Aviziniai_blynai.html
+++ b/Cia_gyvena_laime/Aviziniai_blynai.html
@@ -95,10 +95,9 @@
 	<div class="navigation">
 		<ul class="navigation_list">
 			<li><a class="fas fa-times" href=""></a></li>
-			<li><a class="list_item" href="">Receptai</a></li>
-			<li><a class="list_item" href="">Gėlės</a></li>
-			<li><a class="list_item" href="">Vaikai</a></li>
-			<li><a class="list_item" href="">Laisvalaikis</a></li>
+			<li><a class="list_item" href="Kategorijos/Receptai.html">Receptai</a></li>
+			<li><a class="list_item" href="Kategorijos/Vaikai.html">Vaikai</a></li>
+			<li><a class="list_item" href="Kategorijos/Laisvalaikis.html">Laisvalaikis</a></li>
 			<li><a class="list_item" href="Kontaktine_forma/index.php">Parašykite man</a></li>
 		</ul>
 	</div>
