--- a/Cia_gyvena_laime/Scones.html
+++ b/Cia_gyvena_laime/Scones.html
@@ -98,16 +98,13 @@
 				<a class="fas fa-times" href=""></a>
 			</li>
 			<li>
-				<a class="list_item" href="">Receptai</a>
+				<a class="list_item" href="Kategorijos/Receptai.html">Receptai</a>
 			</li>
 			<li>
-				<a class="list_item" href="">Gėlės</a>
+				<a class="list_item" href="Kategorijos/Vaikai.html">Vaikai</a>
 			</li>
 			<li>
-				<a class="list_item" href="">Vaikai</a>
-			</li>
-			<li>
-				<a class="list_item" href="">Laisvalaikis</a>
+				<a class="list_item" href="Kategorijos/Laisvalaikis.html">Laisvalaikis</a>
 			</li>
 			<li>
 				<a class="list_item" href="Kontaktine_forma/index.php">Parašykite man</a>
