--- a/Cia_gyvena_laime/Kategorijos/Laisvalaikis.html
+++ b/Cia_gyvena_laime/Kategorijos/Laisvalaikis.html
@@ -136,7 +136,7 @@
 				<a class="list_item" href="Vaikai.html">Vaikai</a>
 			</li>
 			<li>
-				<a class="list_item" href="Laisvalaikis.html">Laisvalaikis</a>
+				<a class="list_item">Laisvalaikis</a>
 			</li>
 			<li>
 				<a class="list_item" href="../Kontaktine_forma/index.php">Parašykite man</a>
