--- a/Cia_gyvena_laime/Kategorijos/Vaikai.html
+++ b/Cia_gyvena_laime/Kategorijos/Vaikai.html
@@ -133,7 +133,7 @@
 				<a class="list_item" href="Receptai.html">Receptai</a>
 			</li>
 			<li>
-				<a class="list_item" href="Vaikai.html">Vaikai</a>
+				<a class="list_item">Vaikai</a>
 			</li>
 			<li>
 				<a class="list_item" href="Laisvalaikis.html">Laisvalaikis</a>
